# python-flight-server

./: README.md  pyproject.toml
src/query_farm_flight_server/: parameter_types.py  server.py
src/query_farm_server_base/: action_decoders.py  admin.py  auth.py  auth_manager.py  auth_manager_dynamodb.py  auth_manager_naive.py  duckdb_serialized_expression.py  duckdb_serialized_values.py  flight_handling.py  flight_inventory.py  middleware.py  parameter_types.py  schema_uploader.py  server.py  test_action_decoders.py  test_action_decorators.py  test_auth_manager.py  test_auth_manager_memory.py  test_auth_manager_naive.py  test_duckdb_serialized_expression.py
