[project]
name = "query-farm-server-base"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "Rusty Conover", email = "rusty@conover.me" }]
dependencies = [
    "structlog>=24.4.0",
    "pydantic>=2.9.2",
    "mypy-boto3-dynamodb>=1.35.24",
    "boto3>=1.35.0",
    "cache3>=0.4.3",
    "click>=8.1.7",
    "prettytable>=3.11.0",
    "pyarrow>=19.0.0",
    "sentry-sdk>=2.16.0",
    "zstandard>=0.23.0",
    "fuzzywuzzy>=0.18.0",
    "python-levenshtein>=0.26.0",
    "mypy-boto3-s3>=1.35.42",
    "msgpack>=1.1.0",
]
readme = "README.md"
requires-python = ">= 3.12"
classifiers = ["Private :: Do Not Upload"]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "moto>=5.0.16",
    "pytest>=8.3.2",
    "pytest-mypy>=0.10.3",
    "pytest-env>=1.1.3",
    "pytest-cov>=5.0.0",
    "pytest-parallel>=0.1.1",
    "pytest-xdist>=3.6.1",
    "ruff>=0.6.2",
    "moto>=5.1.4",
]

[tool.rye.include]
files = ["py.typed"]


[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/query_farm_server_base"]


[tool.pytest]

[tool.pytest.ini_options]
#addopts = "-s "
addopts = "--mypy"
#env = [
#    "AWS_SECRET_ACCESS_KEY=test",
#    "AWS_ACCESS_KEY_ID=test",
#]
markers = ["moto: conflicting with boto3 based tests"]


[tool.mypy]
ignore_missing_imports = true
plugins = ["pydantic.mypy"]


follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true

# for strict mypy: (this is the tricky one :-))
disallow_untyped_defs = true


[tool.pydantic.mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
ignore = ['E501']
